# pymdgen

./: .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.yaml  README.md  mkdocs.yml  pymdgen.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: tests.yml
Ctl/: requirements-test.txt
docs/: quickstart.md
src/pymdgen/: __init__.py  cli.py  md.py  test_getargspec.py  test_module.py
tests/: conftest.py  helpers.py  test_cli.py  test_gen_docs.py  test_md.py
tests/data/2/: gencodedocs.expected.doc_class.md  gencodedocs.expected.doc_func.md  gencodedocs.expected.html  gencodedocs.expected.md  test_doc_func.md
tests/data/3/: gencodedocs.expected.doc_class.md  gencodedocs.expected.doc_func.md  gencodedocs.expected.html  gencodedocs.expected.md  gencommandoutput.expected.html
