[tool.poetry]
name = "pymdgen"
version = "0.2.3.1"
description = "python code markdown documentation generator"
authors = ["20C <code@20c.com>"]
license = "Apache-2.0"

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.4",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6"
]

[tool.poetry.scripts]
pymdgen = "pymdgen.cli:main"

[tool.poetry.plugins."markdown.extensions"]
pymdgen = "pymdgen.md:Extension"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
codecov = ">=2.0.5"
coverage = ">=4.1"
pytest-cov = "*"
tox = "*"
markdown = "*"
markdown-include = ">=0.5,<1"
mkdocs = ">=1.0.0,<2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
